--- a/t-shirts.html
+++ b/t-shirts.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-3">
-                    <img height="100" width="200" id="logo" src="SHAHZAIB-01.png" alt="">
+                    <img height="100" width="300" id="logo" src="logo S-01.png" alt="">
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-6" id="top-txt">
                     <h5>All Varieties Of Kids Garments Are Available Here </h5>
