--- a/pant.html
+++ b/pant.html
@@ -37,6 +37,12 @@
 
         </div>
 
+
+        <a class="scrollToTop" href="#" style="display:block">
+            <i class="fa fa-arrow-up" aria-hidden="true"></i>
+        </a>
+        
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <div class="container">
                 <a class="navbar-brand" href="#"> </a>
